<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DoctorProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/mainSection">
    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:padding="5dp"
        android:text="@string/profile"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp" />
    <Button
        android:id="@+id/btnSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="70dp"
        android:text="@string/schedule"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnBlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="70dp"
        android:text="@string/blog"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UserId : "
            android:id="@+id/txUid"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:hint="First Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="Gender"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="160dp"
            android:layout_height="41dp"
            android:layout_below="@+id/add"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female"
                android:textStyle="bold" />
        </RadioGroup>


        <EditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:hint="Email Address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/mobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="Mobile Number"
            android:inputType="number" />

        <EditText
            android:id="@+id/qualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="Qualification"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/specialization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="Speciality"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="Language"
            android:inputType="text" />

        <EditText
            android:id="@+id/visitingCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="Visiting Charges"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/updatebtn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_green_dark"
            android:text="Update"
            android:textStyle="bold"></Button>

    </LinearLayout>

</LinearLayout>